cmake_minimum_required(VERSION 3.13)
project(untitled2)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled2 207.cpp 406.cpp RadixSort.cpp 16.cpp 416.cpp 292.cpp 54.cpp 59.cpp 88.cpp 387.cpp 118.cpp 73.cpp 131.cpp 371.cpp 328.cpp 454.cpp 227.cpp 378.cpp 412.cpp 204.cpp 38.cpp 22.cpp 172.cpp 91.cpp 134.cpp 162.cpp 208.cpp 384.cpp 116.cpp 191.cpp 395.cpp 50.cpp 334.cpp 43.cpp 42.cpp
        128.cpp 28.cpp 380.cpp 315.cpp 41.cpp 127.cpp 124.cpp 105.cpp 289.cpp 166.cpp 341.cpp 295.cpp 36.cpp 179.cpp 200.cpp 130.cpp 89.cpp 33.cpp 113.cpp 47.cpp 92.cpp 148.cpp 152.cpp 218.cpp 199.cpp 40.cpp 58.cpp 74.cpp 93.cpp 90.cpp 77.cpp 129.cpp 80.cpp 187.cpp 63.cpp 117.cpp 137.cpp 228.cpp 229.cpp
        120.cpp 143.cpp 119.cpp 299.cpp 219.cpp 220.cpp 278.cpp 151.cpp 201.cpp
        257.cpp 258.cpp 274.cpp 260.cpp)